fix: removed extra spacing above input groups
Related to #340

--- a/packages/form-js-viewer/assets/form-js.css
+++ b/packages/form-js-viewer/assets/form-js.css
@@ -208,7 +208,6 @@
 .fjs-container .fjs-input-group {
   display: flex;
   width: 100%;
-  margin-top: 8px;
   margin: 4px, 0;
   border: var(--border-definition);
   border-radius: 3px;
